--- a/springboot-rest-api-sample/src/main/resources/static/index.html
+++ b/springboot-rest-api-sample/src/main/resources/static/index.html
@@ -10,11 +10,13 @@
 	rel="stylesheet"
 	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
 	crossorigin="anonymous">
+
 </head>
 <body>
 	<h1>Spring Boot Rest API CRUD completo</h1>
 	<div class="container">
 		<h3>Cadastro de Usuário</h3>
+		<p id="msg"></p>
 		<form action="" id="formCadUser">
 			<div class="row">
 				<div class="col-4">
@@ -25,15 +27,18 @@
 			</div>
 			<div class="row">
 				<div class="col-4">
-					<label for="nome" class="form-label">Nome</label> <input
+					<label for="nome" class="form-label">Nome</label> <label
+						id="lbnome" style="color: red; font-size: 12px;"></label> <input
 						type="text" class="form-control" id="nome"
-						placeholder="Nome completo">
+						onkeyup="limpaMsgNome();" placeholder="Nome completo">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-4">
-					<label for="idade" class="form-label">Idade</label> <input
-						type="number" class="form-control" id="idade" placeholder="99">
+					<label for="idade" class="form-label">Idade</label> <label
+						id="lbidade" style="color: red; font-size: 12px;"></label> <input
+						type="number" class="form-control" id="idade"
+						onkeyup="limpaMsgIdade();" placeholder="99">
 				</div>
 			</div>
 			<br>
@@ -42,15 +47,33 @@
 					<button type="button" class="btn btn-success"
 						onclick="salvarUsuario()">Salvar</button>
 					<button type="button" class="btn btn-secondary"
-						onclick="document.getElementById('formCadUser').reset();">Novo</button>
-					<button type="button" class="btn btn-danger" onclick="excluirUser()">Excluir</button></td>
-					<button type="button" class="btn btn-warning" data-bs-toggle="modal"
-						data-bs-target="#pesquisaUserModal">Pesquisar</button>
+						onclick="document.getElementById('formCadUser').reset(); 
+						limpaMsg(); limpaMsgNome(); limpaMsgIdade();">Novo</button>
+					<button type="button" class="btn btn-danger"
+						onclick="excluirUser()">Excluir</button>
+					</td>
+					<button type="button" class="btn btn-warning"
+						data-bs-toggle="modal" data-bs-target="#pesquisaUserModal">Pesquisar</button>
 				</div>
 			</div>
 		</form>
+		<div class="row">
+		<!-- tabela de apresentação dos usuários -->
+			<table id="tbUsuarios" class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th scope="col">Código</th>
+						<th scope="col">Nome</th>
+						<th scope="col">Idade</th>
+						<th scope="col">Editar</th>
+						<th scope="col">Excluir</th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+		</div>
 	</div>
-
 
 	<!-- MODAL -->
 	<div class="modal fade" id="pesquisaUserModal" tabindex="-1"
@@ -71,25 +94,25 @@
 								placeholder="Nome completo">
 						</div>
 						<div class="mb-3">
-							<button type="button" class="btn btn-success" onclick="pesquisarUsuarios()">Buscar</button>
+							<button type="button" class="btn btn-success"
+								onclick="pesquisarUsuarios()">Buscar</button>
 						</div>
 					</form>
-
-					<table class="table table-striped table-hover" id="tabelaResultados">
-						<thead>
-							<tr>
-								<th scope="col">Código</th>
-								<th scope="col">Nome</th>
-								<th scope="col">Idade</th>
-								<th scope="col">Editar</th>
-								<th scope="col">Excluir</th>
-							</tr>
-						</thead>
-						<tbody>
-							
-						</tbody>
-					</table>
-
+					<div style="hight: 400px; overflow: scroll;">
+						<table class="table table-striped table-hover"
+							id="tabelaResultados">
+							<thead>
+								<tr>
+									<th scope="col">Código</th>
+									<th scope="col">Nome</th>
+									<th scope="col">Editar</th>
+									<th scope="col">Excluir</th>
+								</tr>
+							</thead>
+							<tbody>
+							</tbody>
+						</table>
+					</div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary"
@@ -112,12 +135,33 @@
 
 	<!-- scripts diversos -->
 	<script>
+		function limpaMsg() {
+			document.getElementById("msg").innerHTML = '';
+		}
+
+		function limpaMsgNome() {
+			document.getElementById("lbnome").innerHTML = '';
+		}
+
+		function limpaMsgIdade() {
+			document.getElementById("lbidade").innerHTML = '';
+		}
+
 		function salvarUsuario() {
 			var id = $("#id").val();
 			var nome = $("#nome").val();
 			var idade = $("#idade").val();
 			/*alert(nome);*/
-
+			if (nome == null || nome.trim() == '') {
+				document.getElementById("lbnome").innerHTML = '** Preencha o campo nome **';
+				$('#nome').focus();
+				return;
+			}
+			if (idade == null || idade.trim() == '') {
+				document.getElementById("lbidade").innerHTML = '** Preencha o campo idade **';
+				$('#idade').focus();
+				return;
+			}
 			$.ajax({
 				method : "POST",
 				url : "salvar",
@@ -129,38 +173,47 @@
 				contentType : "application/json; charset=utf-8",
 				success : function(response) {
 					$("#id").val(response.id);
-					alert("Salvo com sucesso!");
+					/*$('#msg').val('Salvo com sucesso!');*/
+					document.getElementById("msg").innerHTML = 'Salvo com sucesso!';
+					document.getElementById("msg").style.color = "green";
 				}
 			}).fail(function(xhr, status, errorThrown) {
-				alert("Erro ao salvar:\n" + xhr.responseText);
+					alert("Erro ao salvar:\n" + xhr.responseText);
 			});
 		}
-		
-		function pesquisarUsuarios(){
+
+		function pesquisarUsuarios() {
+			limpaMsg();
 			var nome = $("#nomeBusca").val();
-			if(nome != null && nome.trim() != ''){
+			if (nome != null && nome.trim() != '') {
 				$.ajax({
 					method : "GET",
 					url : "buscarUserPorNome",
 					data : "nome=" + nome,
 					success : function(response) {
-						$('#tabelaResultados > tbody > tr').remove();	
-						for (var i = 0; i < response.length; i++){
-							$('#tabelaResultados > tbody').append('<tr id="'+response[i].id+'"><td>'+ 
-									response[i].id +'</td><td>'+ response[i].nome 
-									+'</td><td>'+ response[i].idade +
-									'</td><td><button type="button" class="btn btn-primary" onclick="colocarEmEdicao('+response[i].id+')">Editar</button></td>'+
-									'</td><td><button type="button" class="btn btn-danger" onclick="excluirUserId('+response[i].id+')">Excluir</button></td></tr>')
+						$('#tabelaResultados > tbody > tr').remove();
+						for (var i = 0; i < response.length; i++) {
+							$('#tabelaResultados > tbody').append('<tr id="'+response[i].id+'"><td>'
+								+ response[i].id
+								+ '</td><td>'
+								+ response[i].nome
+								+ '</td><td><button type="button" class="btn btn-light" onclick="colocarEmEdicao('
+								+ response[i].id
+								+ ')"><image src=\"img/edit.png\" height=28></button></td>'
+								+ '</td><td><button type="button" class="btn btn-light" onclick="excluirUserId('
+								+ response[i].id
+								+ ')"><image src=\"img/excluir.png\" height=28></button></td></tr>')
 						}
 					}
 				}).fail(function(xhr, status, errorThrown) {
-					alert("Erro ao buscar usuário pelo nome:\n" + xhr.responseText);
+						alert("Erro ao buscar usuário pelo nome:\n" + xhr.responseText);
 				});
 			}
 		}
-		
-		function colocarEmEdicao(id){
-			if(id != null || id != 0){
+
+		function colocarEmEdicao(id) {
+			limpaMsg();
+			if (id != null || id != 0) {
 				$.ajax({
 					method : "GET",
 					url : "buscauserporid",
@@ -170,40 +223,73 @@
 						$('#nome').val(response.nome);
 						$('#idade').val(response.idade);
 					}
-				}).fail(function(xhr, status, errorThrown) {
-					alert("Erro ao buscar usuário pelo código:\n" + xhr.responseText);
-				});
+				}).fail(
+						function(xhr, status, errorThrown) {
+							alert("Erro ao buscar usuário pelo código:\n"
+									+ xhr.responseText);
+						});
 			}
 		}
-		
-		function excluirUserId(id){
-			if(id != null || id != 0){
-				if(confirm('Deseja excluir?')){
+
+		function excluirUserId(id) {
+			if (id != null || id != 0) {
+				if (confirm('Deseja excluir?')) {
 					$.ajax({
 						method : "DELETE",
 						url : "delete",
 						data : "iduser=" + id,
 						success : function(response) {
-							$('#'+id).remove();
+							$('#' + id).remove();
 							/*alert(response);*/
+							document.getElementById("msg").innerHTML = 'Salvo Excluído com sucesso!';
+							document.getElementById("msg").style.color = "red";
 						}
 					}).fail(function(xhr, status, errorThrown) {
-						alert("Erro ao excluir usuário pelo código:\n" + xhr.responseText);
+							alert("Erro ao excluir usuário pelo código:\n" + xhr.responseText);
 					});
 				}
 			}
 		}
-		
-		function apagarPesquisa(){
+
+		function apagarPesquisa() {
 			$('#nomeBusca').val('');
 			$('#tabelaResultados > tbody > tr').remove();
 		}
-		
-		function excluirUser(){
+
+		function excluirUser() {
 			var id = $('#id').val();
 			excluirUserId(id);
-			document.getElmentById('formCadUser').reset();
+			limpaMsgNome();
+			limpaMsgIdade();
+			document.getElementById('formCadUser').reset();
 		}
+
+		/* preenchimento da tabela na tela */
+		$(document).ready(function() {
+			$.ajax({
+				method : "GET",
+				url : "listatodos",
+				success : function(response) {
+				$('#tbUsuarios > tbody > tr').remove();
+				for (var i = 0; i < response.length; i++) {
+					$('#tbUsuarios > tbody').append('<tr id="'+response[i].id+'"><td>'
+						+ response[i].id
+						+ '</td><td>'
+						+ response[i].nome
+						+ '</td><td>'
+						+ response[i].idade
+						+ '</td><td><button type="button" class="btn btn-light" onclick="colocarEmEdicao('
+						+ response[i].id
+						+ ')"><image src=\"img/edit.png\" height=28></button></td>'
+						+ '</td><td><button type="button" class="btn btn-light" onclick="excluirUserId('
+						+ response[i].id
+						+ ')"><image src=\"img/excluir.png\" height=28></button></td></tr>')
+					}
+				}
+			}).fail(function(xhr, status, errorThrown) {
+							alert("Erro ao buscar usuário pelo nome:\n" + xhr.responseText);
+			});
+		});
 	</script>
 </body>
 </html>
